--- a/src/index-old.html
+++ b/src/index-old.html
@@ -141,7 +141,7 @@
 
   <main>
     <!-- hero  -->
-    <section class="hero-slider relative  mx-auto p-4">
+    <section class="hero-slider  mx-auto p-4">
 
       <div class="swiper heroSwiper">
         <div class="swiper-wrapper">
@@ -159,7 +159,82 @@
                 class="3xl:text-[120px] text-5xl md:text-7xl xl:text-8xl font-medium 3xl:leading-[120px] tracking-tighter 3xl:w-[580px] xl:w-[575px] md:w-[485px] md:max-w-full  max-w-[400px]">
                 Resonancia magnética
               </h1>
+              <ul class="flex flex-col gap-3 max-w-full w-[277px] sm:w-[332px] p-2 sm:p-3 bg-[#FEFEFD]/50 rounded-3xl">
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/area.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Área médica 
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
 
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/directorio.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Consulta tus resultados 
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/ubicanos.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Directorio médico
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/area.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Ubícanos 
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
+
+              </ul>
             </div>
           </div>
 
@@ -176,7 +251,82 @@
                 class="3xl:text-[120px] text-5xl md:text-7xl xl:text-8xl font-medium 3xl:leading-[120px] tracking-tighter 3xl:w-[580px] xl:w-[575px] md:w-[485px] md:max-w-full  max-w-[400px]">
                 New Text <br> magnética
               </h2>
+              <ul class="flex flex-col gap-3 max-w-full w-[277px] sm:w-[332px] p-2 sm:p-3 bg-[#FEFEFD]/50 rounded-3xl">
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/area.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Área médica 
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
 
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/directorio.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Consulta tus resultados 
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/ubicanos.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Directorio médico
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
+                <!-- single item start  -->
+                <li>
+                  <a href=""
+                    class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
+                    <div class="flex flex-row gap-2.5 items-center">
+                      <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
+                        <img src="./images/area.svg" alt="area" class="sm:w-auto w-4">
+                      </div>
+                      <div class="text-Black font-medium sm:text-lg text-base">
+                        Ubícanos 
+                      </div>
+                    </div>
+                    <div class="text-Black font-medium sm:text-lg text-base">
+                      <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
+                    </div>
+                  </a>
+                </li>
+                <!-- single item end  -->
+
+              </ul>
             </div>
           </div>
 
@@ -205,85 +355,7 @@
           </button>
         </div>
       </div>
-      <div
-        class="xl:left-[calc(50%+40px)] lg:left-[calc(50%+30px)] left-8 absolute md:bottom-[13%] sm:bottom-[14.5%] bottom-[19.5%] lg:bottom-7 z-40">
-        <ul class="flex flex-col gap-3 max-w-full w-[277px] sm:w-[332px] p-2 sm:p-3 bg-[#FEFEFD]/50 rounded-3xl">
-          <!-- single item start  -->
-          <li>
-            <a href=""
-              class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
-              <div class="flex flex-row gap-2.5 items-center">
-                <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
-                  <img src="./images/area.svg" alt="area" class="sm:w-auto w-4">
-                </div>
-                <div class="text-Black font-medium sm:text-lg text-base">
-                  Área médica 
-                </div>
-              </div>
-              <div class="text-Black font-medium sm:text-lg text-base">
-                <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
-              </div>
-            </a>
-          </li>
-          <!-- single item end  -->
 
-          <!-- single item start  -->
-          <li>
-            <a href=""
-              class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
-              <div class="flex flex-row gap-2.5 items-center">
-                <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
-                  <img src="./images/directorio.svg" alt="area" class="sm:w-auto w-4">
-                </div>
-                <div class="text-Black font-medium sm:text-lg text-base">
-                  Consulta tus resultados 
-                </div>
-              </div>
-              <div class="text-Black font-medium sm:text-lg text-base">
-                <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
-              </div>
-            </a>
-          </li>
-          <!-- single item end  -->
-          <!-- single item start  -->
-          <li>
-            <a href=""
-              class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
-              <div class="flex flex-row gap-2.5 items-center">
-                <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
-                  <img src="./images/ubicanos.svg" alt="area" class="sm:w-auto w-4">
-                </div>
-                <div class="text-Black font-medium sm:text-lg text-base">
-                  Directorio médico
-                </div>
-              </div>
-              <div class="text-Black font-medium sm:text-lg text-base">
-                <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
-              </div>
-            </a>
-          </li>
-          <!-- single item end  -->
-          <!-- single item start  -->
-          <li>
-            <a href=""
-              class="flex flex-row justify-between items-center bg-White rounded-full py-1 pl-2 pr-4 sm:pr-6 hover:bg-White/50 transition-all ease-in-out duration-300">
-              <div class="flex flex-row gap-2.5 items-center">
-                <div class="flex w-8 h-8 sm:w-10 sm:h-10 justify-center items-center bg-Light rounded-full">
-                  <img src="./images/area.svg" alt="area" class="sm:w-auto w-4">
-                </div>
-                <div class="text-Black font-medium sm:text-lg text-base">
-                  Ubícanos 
-                </div>
-              </div>
-              <div class="text-Black font-medium sm:text-lg text-base">
-                <img src="./images/arrow-black.svg" alt="arrow" class="sm:w-auto w-1.5">
-              </div>
-            </a>
-          </li>
-          <!-- single item end  -->
-
-        </ul>
-      </div>
     </section>
 
     <!-- Estudios start  -->
