--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -195,29 +195,29 @@
               <div class="">
                 <ul class="flex flex-wrap flex-row gap-[18px]">
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Trabajo
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Trabajo
                       en
                       equipo</a></li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Empatía</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Empatía</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Calidad</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Calidad</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Innovación</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Innovación</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Confianza</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Confianza</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Ética</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Ética</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Análisis</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Análisis</a>
                   </li>
                   <li><a href=""
-                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block">Eficiencia</a>
+                      class="border border-Accent px-6 py-2 text-Black font-medium leading-[24px] text-xl rounded-full inline-block bg-White">Eficiencia</a>
                   </li>
                 </ul>
                 <div class="-mr-6 md:mt-0 mt-5">
