--- a/src/resonancia-magnética.html
+++ b/src/resonancia-magnética.html
@@ -170,7 +170,7 @@
       <div class="box-container">
 
         <div
-          class="md:bg-[url(../images/resonancia-desktop.png)] bg-[url(../images/resonancia-mobile.png)] sm:bg-size-[100%_100%] bg-size-[100%] md:min-h-[926px] bg-no-repeat sm:min-h-[1510px] xs:min-h-[1140px] mxs:min-h-[1100px] min-h-[1074px] flex flex-col justify-between">
+          class="md:bg-[url(../images/resonancia-desktop.png)] bg-[url(../images/resonancia-mobile.png)] sm:bg-size-[100%_100%] bg-size-[100%] md:min-h-[926px] bg-no-repeat sm:min-h-[1510px] xs:min-h-[1140px] mxs:min-h-[1100px] min-h-[1074px] flex flex-col justify-between mobilePosstion">
           <div class="flex flex-row justify-between items-start sm:pt-3">
             <div
               class="xl:max-w-[576px] lg:max-w-[460px] md:max-w-[340px] sm:max-w-[340px] xxs:max-w-[250px] max-w-[240px]  xl:mt-0 lg:-mt-8 md:-mt-[140px] flex flex-col gap-6 -mt-4">
